test/sema/exercise/struct_cycle.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct Color {
// CHECK: [[# @LINE - 1 ]]:8: error: struct 'Color' contains itself
  r: number,
  g: number,
  b: number,
  c: Color,
}

fn main(): unit {}
